# Sunshine-Updater

./: .gitignore  CMakeLists.txt  LICENSE  README.md  admin.manifest  app.rc.in  build.bat  build.ps1  check_vs.bat  gui.cpp  setup_env.ps1  update_sunshine.bat  update_sunshine.ps1  update_sunshine_gui.bat  updater.cpp
